--- a/contact.html
+++ b/contact.html
@@ -14,6 +14,7 @@
 		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
 		
 		<link href='https://fonts.googleapis.com/css?family=Bad Script' rel='stylesheet'>
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	</head>
 	
 	<body style="background-color:#797979;">
