--- a/contact.html
+++ b/contact.html
@@ -28,7 +28,7 @@
 						<li><b><a href="index.html">About</a></b></li>
 						<li><b><a href="experience.html">Experience</a></b></li>
 						<li><b><a href="projects.html">Projects</a></b></li>
-						<li><b><a href="contact.html">Contact</a></b></li>
+						<li><b>Contact</b></li>
 						
 					</ul>
 				</nav>
