--- a/experience.html
+++ b/experience.html
@@ -26,7 +26,7 @@
 					<ul>
 						
 						<li><b><a href="index.html">About</a></b></li>
-						<li><b><a href="experience.html">Experience</a></b></li>
+						<li><b>Experience</b></li>
 						<li><b><a href="projects.html">Projects</a></b></li>
 						<li><b><a href="contact.html">Contact</a></b></li>
 							
