--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 				<nav>
 					<ul>
 						
-						<li><b><a href="index.html">About</a></b></li>
+						<li><b>About</b></li>
 						<li><b><a href="experience.html">Experience</a></b></li>
 						<li><b><a href="projects.html">Projects</a></b></li>
 						<li><b><a href="contact.html">Contact</a></b></li>
