--- a/projects.html
+++ b/projects.html
@@ -27,7 +27,7 @@
 						
 						<li><b><a href="index.html">About</a></b></li>
 						<li><b><a href="experience.html">Experience</a></b></li>
-						<li><b><a href="projects.html">Projects</a></b></li>
+						<li><b>Projects</b></li>
 						<li><b><a href="contact.html">Contact</a></b></li>
 							
 					</ul>
